# otus-cpp-prof-4

./: CMakeLists.txt  README.md  metafunc.cpp
.github/workflows/: release.yml
